change default configuration for deployment

--- a/deploy/install.yaml
+++ b/deploy/install.yaml
@@ -158,6 +158,7 @@ metadata:
 data:
   FLASK_ENV: "production"
   PYTHONUNBUFFERED: "TRUE"
+  IMAGESWAP_INCLUDE_PATH: "false"
   IMAGESWAP_MODE: "MAPS"
   IMAGESWAP_LOG_LEVEL: "INFO"
 
