Sync imageswap from original creator to the version 1.5.1

--- a/deploy/install.yaml
+++ b/deploy/install.yaml
@@ -34,6 +34,7 @@ rules:
     - update
     - delete
     - approve
+    - sign
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -158,16 +159,14 @@ metadata:
 data:
   FLASK_ENV: "production"
   PYTHONUNBUFFERED: "TRUE"
-  IMAGESWAP_INCLUDE_PATH: "false"
   IMAGESWAP_MODE: "MAPS"
   IMAGESWAP_LOG_LEVEL: "INFO"
-
 
 ---
 apiVersion: v1
 data:
   imageswap-mwc: |
-    apiVersion: admissionregistration.k8s.io/v1beta1
+    apiVersion: admissionregistration.k8s.io/v1
     kind: MutatingWebhookConfiguration
     metadata:
       name: imageswap-webhook
@@ -192,7 +191,9 @@ data:
               - "*"
             resources:
               - "pods"
-        failurePolicy: Ignore
+        sideEffects: None
+        admissionReviewVersions: ["v1"]
+        failurePolicy: Fail
         reinvocationPolicy: IfNeeded
         namespaceSelector:
           matchLabels:
@@ -207,7 +208,7 @@ metadata:
 apiVersion: v1
 data:
   maps: |
-    default::registry.example.com
+    default:registry.example.com
 kind: ConfigMap
 metadata:
   creationTimestamp: null
@@ -247,6 +248,7 @@ spec:
   selector:
     matchLabels:
       app: imageswap
+
 ---
 
 apiVersion: apps/v1
@@ -273,7 +275,7 @@ spec:
         runAsGroup: 1898
       initContainers:
         - name: imageswap-init
-          image: thewebroot/imageswap-init:v0.0.2
+          image: thewebroot/imageswap-init:v1.5.1
           command: [/app/imageswap-init.py]
           imagePullPolicy: Always
           securityContext:
@@ -297,7 +299,7 @@ spec:
               mountPath: /mwc
       containers:
       - name: imageswap
-        image: quay.io/plotly/imageswap:v1.4.4
+        image: thewebroot/imageswap:v1.5.1
         ports:
         - containerPort: 5000
         command: ["gunicorn", "imageswap:app", "--config=config.py"]
